2011-04-18  Ivan Maidanski  <ivmai@mail.ru>

	* dbg_mlc.c (GC_store_debug_info_inner): Always define; add
	"const" to its string argument.
	* dbg_mlc.c (GC_store_debug_info): Call GC_store_debug_info_inner.
	* dbg_mlc.c (GC_debug_free): Set GC_have_errors in case of
	smashed or previously deallocated found.
	* dbg_mlc.c (GC_check_heap_block): Replace while loop with a for
	one.
	* reclaim.c (GC_reclaim_check): Ditto.
	* dbg_mlc.c (GC_check_heap_proc): Remove redundant cast to word.
	* os_dep.c (GC_get_stack_base): Don't initialize
	stackbase_main_self/ss_sp on Solaris if thr_main() is zero (thus
	calling GC_INIT() from a non-primordial thread is possible now).
	* reclaim.c (GC_add_leaked): Turn into an inline one.
	* reclaim.c (GC_reclaim_small_nonempty_block):
	Change report_if_found type from int/word to boolean.
	* include/private/gc_priv.h (GC_start_reclaim): Ditto.
	* include/private/gc_priv.h (set_mark_bit_from_hdr,
	clear_mark_bit_from_hdr): Place closing parenthesis properly;
	reformat the code.

2011-04-16  Ivan Maidanski  <ivmai@mail.ru>

	* os_dep.c (GC_get_main_stack_base): Try to use
	pthread_attr_getstack first for Linux if THREADS.
	* doc/README.macros (USE_GET_STACKBASE_FOR_MAIN): Adjust text
	alignment.

2011-04-13  Ivan Maidanski  <ivmai@mail.ru>

	* dbg_mlc.c (GC_generate_random_backtrace_no_gc): Fix a message
	typo.
	* dbg_mlc.c (GC_debug_malloc): Add a comment (about zero size).
	* dbg_mlc.c (GC_debug_generic_malloc_inner): Reformat the comment.
	* dbg_mlc.c (GC_strdup): Call GC_err_printf instead of WARN (in
	case of NULL argument).
	* dbg_mlc.c (GC_free): In case of NULL argument, just return
	(without any warning printed); eliminate "uncollectable" local
	variable.

2011-04-13  Ivan Maidanski  <ivmai@mail.ru> (mostly really Rainer Orth)

	* configure.ac (THREADDLLIBS): Use alternate thread library on
	Solaris 8.
	* configure.ac (need_atomic_ops_asm): Set to true only for Sparc
	Solaris.
	* configure.ac: Don't use libdl on mips-sgi-irix6.