@@ -1,3 +1,12 @@
+2011-04-18  Ivan Maidanski  <ivmai@mail.ru> (really Ludovic Courtes)
+
+	* tests/tests.am (TESTS, check_PROGRAMS): Add
+	'initsecondarythread'.
+	* tests/tests.am (initsecondarythread_SOURCES,
+	initsecondarythread_LDADD): New variable.
+	* Makefile.in: Regenerate.
+	* configure: Ditto.
+
 2011-04-18  Ivan Maidanski  <ivmai@mail.ru>
 
 	* dbg_mlc.c (GC_store_debug_info_inner): Always define; add
